<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="center"
              android:orientation="vertical"
              android:padding="10dp"
             >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        tools:ignore="UselessParent"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:background="#bdf4fc"
            android:gravity="center"
            android:text="@string/GSTselection"
            android:textColor="#cc0000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/radiogroup">

            <RadioButton
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:text="@string/r1"
              android:textSize="20sp"
              android:id="@+id/r1"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/r2"
                android:textSize="20sp"
                android:id="@+id/r2"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/r3"
                android:textSize="20sp"
                android:id="@+id/r3"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/r4"
                android:textSize="20sp"
                android:id="@+id/r4"/>

        </RadioGroup>


        <Button
            android:id="@+id/submit_btnv2"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dip"
            android:background="#2937ff"
            android:text="@string/submit_btn"
            android:textColor="#fff"
            android:textSize="20sp" />

    </LinearLayout>
</LinearLayout>